tdf#166474 revert tdf#164907 sw: Calculate row height ... #2

This reverts 25.8 commit e9ed6f1d2cc145e7514bf0a27b8c77f370ceab2d
(backported to 25.2.2).

It turns out that Oliver's 25.2 commit was correct after all,
and that "other factors" were coming into play
that had confused the issue.

I found this by doing an mso-test against my commits
for tdf#164907 and tdf#165492. I noticed that the improvements
for DOC files seemed to only be half-improved.
I hadn't clued in to that while going through DOCX files,
but afterwards I revisited them and then could see a similar need.

make CppunitTest_sw_layoutwriter4 \
    CPPUNIT_TEST_NAME=TestTdf164907_rowHeightAtLeast

Change-Id: Ib35094583562b8ec36c8583c8fa47c5542b6b1e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184999
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit b3e1d66d944106bef177a01f7d180ed507c9716c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185054
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>