sw/source/core/layout/tabfrm.cxx
@@ -213,7 +213,6 @@ static bool lcl_InnerCalcLayout( SwFrame *pFrame,
 // cell height.
 static SwTwips lcl_CalcMinRowHeight( const SwRowFrame *pRow,
                                      const bool _bConsiderObjs );
-static sal_uInt16 lcl_GetLineWidth(const SwRowFrame& rRow, const SvxBoxItemLine& rLine);
 static sal_uInt16 lcl_GetTopSpace( const SwRowFrame& rRow );
 static sal_uInt16 lcl_GetBottomLineDist(const SwRowFrame& rRow);
 
@@ -4983,9 +4982,9 @@ static SwTwips lcl_CalcMinRowHeight( const SwRowFrame* _pRow,
             nHeight = rSz.GetHeight();
             if (bMinRowHeightInclBorder) // handle MS Word 'atLeast' oddities
             {
-                // add (only) top horizontal border
-                nHeight += lcl_GetLineWidth(*_pRow, SvxBoxItemLine::TOP);
-                // MS Word also adds the bottom border padding in addition to the minHeight + line
+                // add top horizontal border line, along with its padding.
+                nHeight += lcl_GetTopSpace(*_pRow);
+                // MS Word also adds the bottom border padding (but not the bottom border line)
                 nHeight += lcl_GetBottomLineDist(*_pRow);
             }
 
@@ -5058,24 +5057,6 @@ static SwTwips lcl_CalcMinRowHeight( const SwRowFrame* _pRow,
     }
 
     return nHeight;
-}
-
-// Calculate the maximum border-line thickness (CalcLineWidth) of all the cells in the row
-static sal_uInt16 lcl_GetLineWidth(const SwRowFrame& rRow, const SvxBoxItemLine& rLine)
-{
-    sal_uInt16 nBorderThickness = 0;
-    for (const SwCellFrame* pCell = static_cast<const SwCellFrame*>(rRow.Lower()); pCell;
-          pCell = static_cast<const SwCellFrame*>(pCell->GetNext()))
-    {
-        sal_uInt16 nTmpWidth = 0;
-        const SwFrame* pLower = pCell->Lower();
-        if (pLower && pLower->IsRowFrame())
-            nTmpWidth = lcl_GetLineWidth(*static_cast<const SwRowFrame*>(pLower), rLine);
-        else
-            nTmpWidth = pCell->GetFormat()->GetAttrSet().GetBox().CalcLineWidth(rLine);
-        nBorderThickness = std::max(nBorderThickness, nTmpWidth);
-    }
-    return nBorderThickness;
 }
 
 // #i29550#
